# cryptocurrency_Trends_Strategy

./: .gitignore  README.md  pyproject.toml  run.py
backtest/: __init__.py  data_feed.py  exchange.py
backtest/data/aggTrades/: BTCUSDT-aggTrades-2026-04-12.csv
config/: __init__.py  backtest.py  base.py  live.py  strategy.py
core/: __init__.py  base_data_fetcher.py  base_trader.py  data_feed.py  exchange.py  types.py
exchange/binance/: trader.py
live/: data_fetcher.py  exchange.py
matching/: __init__.py  matcher.py
matching/core/: engine.py  order.py  order_book.py  trade.py
scripts/: collect_data.py  run_backtest.py  run_live.py
strategy/: __init__.py  order_executor.py  pnl_tracker.py  runner.py  signal_generator.py
trader/: config.py
trader/backtest/: download_data.py
trader/core/: logger.py
trader/exchange/binance/: data_fetcher.py
trader/strategy/: engine.py  order_executor.py  signal_generator.py
